--- a/.github/workflows/maven_build_and_deploy_to_azure_spring_apps_with_artifact.yml
+++ b/.github/workflows/maven_build_and_deploy_to_azure_spring_apps_with_artifact.yml
@@ -1,5 +1,5 @@
 name: Maven Build And Deploy to Azure Spring Apps With Artifact
-on: push
+on: workflow_dispatch
 env:
   ASC_PACKAGE_PATH: ${{ github.workspace }}
   AZURE_SUBSCRIPTION: <azure subscription name>
