--- a/.github/workflows/maven_build_and_deploy_to_azure_spring_apps_with_artifact.yml
+++ b/.github/workflows/maven_build_and_deploy_to_azure_spring_apps_with_artifact.yml
@@ -2,7 +2,7 @@ name: Maven Build And Deploy to Azure Spring Apps With Artifact
 on: workflow_dispatch
 env:
   ASC_PACKAGE_PATH: ${{ github.workspace }}
-  AZURE_SUBSCRIPTION: Visual Studio Enterprise Subscription
+  AZURE_SUBSCRIPTION: 471cca20-96cf-49ce-b242-4e67f0e14e19
 
 jobs:
   maven_build_and_deploy_to_azure_spring_apps_with_artifact:
